# redayuda

./: .dockerignore  .env.example  .env.production.example  .gitignore  DEPLOY.md  Dockerfile  Guia_de_Integracion.md  LICENSE  README.md  deploy.sh  docker-compose.yml  ejemplo_respuesta.json  openapi.yaml  postman_collection.json  pyproject.toml  render.yaml
.atl/: .skill-registry.cache.json  skill-registry.md
.forgejo/workflows/: deploy.yml
app/: __init__.py  client.py  config.py  entities.py  federation.py  main.py  models.py  proposals.py  scheduler.py  search.py  sources.py  store.py
app/connectors/: __init__.py  base.py  registry.py
app/connectors/builtin/: __init__.py  angeles_autopista.py  apoyo_salupro.py  conecta_venezuela.py  data_guaira.py  encuentralos.py  encuentralove.py  faro_ve.py  hf_yofran.py  hospitales.py  mapa_insumos.py  printforhelp.py  red_pana.py  reencuentra_ve.py  refugios_vzla.py  sos_central.py  sos_venezuela.py  tebusco.py  tuia911.py  venezuela_ayuda.py  venezuela_encuentra.py  venezuela_solidaria.py  vnzla_ayuda.py
static/: admin.html  admin.js  app.css  app.js  contribuir.html  contribuir.js  detail.js  dev.html  dev.js  entidad.html  entidad.js  fuentes.html  fuentes.js  index.html  integrar.html  integrar.js  mapa.html  mapa.js  red.html  red.js  rhd.css  shell.js  styles.css  theme.css  tw-config.js  ui.js
tests/: conftest.py  test_auth.py  test_connectors.py  test_endpoints.py  test_entities.py  test_external_connectors.py  test_federation.py  test_proposals.py  test_scheduler.py  test_search.py  test_store.py
