[project]
name = "red-humanitaria-datos-api"
version = "0.1.0"
description = "API FastAPI para indexar y federar fuentes abiertas de informacion humanitaria."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]==0.138.1",
    "httpx>=0.28,<1.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
